--- a/id3.man
+++ b/id3.man
@@ -1,7 +1,6 @@
 .TH ID3 1 "id3 mass tagger"
 .SH NAME
 id3 \- a commandline mass tagger
-
 .SH SYNOPSIS
 .HP 2
 .B id3
@@ -37,7 +36,6 @@ id3 \- a commandline mass tagger
 .IR filename ]
 .RI [ " \*(lqfilespec\*(rq
 \& ... ]
-
 .SH DESCRIPTION
 id3 is a mass tagger for audio files. This means it is intended to be used for
 non-interactively performing operations on the meta-data in a number of files
@@ -53,10 +51,8 @@ id3 currently supports the old-style ID3 format with track-number extension
 (ID3 v1.1), as well as the more complicated ID3v2 (ID3 v2.3.0) format. This
 also means use is pretty much limited to audio files which use these formats,
 e.g, MPEG-1 Layer III.
-
 .SH OPTIONS
-The order of the options is only important where specified.
-
+Order of the options is only important where specified.
 .TP
 .B filespec ...
 specifies the file(s) to be affected by the command.
@@ -67,33 +63,26 @@ your shell performs this function.
 
 The shell pattern matching can be applied to both filenames and directory
 names.
-
 .TP
 .B \-h
 show commandline help
-
 .TP
 .B \-V
 display version number and copyright
-
 .TP
 .B \-v
 be verbose
-
 .TP
 .B \-1
 process ID3v1 tags (default). See `-2'.
-
 .TP
 .B \-2
 process ID3v2 tags. If both -1 and -2 are specified, both tag formats will be
 written.
-
 .TP
 .B \-d
 do not re-use existing tag data. If no new tag information is specified in
 conjunction with this, all selected tags will be removed.
-
 .PP
 .BI \-t " title
 .br
@@ -116,46 +105,38 @@ below.
 
 Genres can be specified either directly or with their assigned number,
 regardless of tag format.
-
 .TP
 .BI \-q " format
 for each file encountered, \fIformat\fR will get scanned for substitution
 commands, and written to standard output.
-
 .TP
 .BI \-f " filename-template
 rename files encountered according to \fIfilename-template\fR.
 The argument is scanned for substitution commands, and empty variables will
 by default get replaced with the string \*(lqUnknown\*(rq. Trying to rename
 to an already existing file will cause an error.
-
 .PP
 The  following  options  only  operate  on  the  last tag format selected on
 the command line, and only have meaning where relevant.
-
 .TP
 .BI \-!
 fill all standard tag fields with information from the source tag. This is
 similar to writing \*(lq-talnygc %t %a %l %n %y %g %c\*(rq, but only operates
 on the last tag. It is possible for the source and destination tag to be the
 same.
-
 .TP
 .BI \-s " size
 try to write a new tag using exactly \fIsize\fR bytes, adding / removing
 padding as necessary.
-
 .TP
 .B \-r\fIFRAME
 remove all occurrences of frames named \fIFRAME\fR from the  tag. Consult the
 format documentation for valid \fIFRAME\fR names.
-
 .TP
 .BI \-w\fIFRAME " data
 add / update  a frame named \fIFRAME\fR with \fIdata\fR in the  tag.  Again,
 consult the format documentation. See \fICOMPATIBILITY\fR for more
 information.
-
 .PP
 Individual options can be stacked in a single argument for more convenience.
 For example, running
@@ -165,26 +146,22 @@ For example, running
 is equivalent to:
 
    id3 -2 -d -a "Artist" -l "Album" -t "Title" *.mp3
-
 .SH SUBSTITUTION
 id3 can perform \*(lqprintf-like\*(rq substitution on the values prior to
 writing them to a tag. Note that if you want to use pattern matching, you
 HAVE TO enclose the wildcard specification on the commandline in double quotes
 to prevent your shell from expanding any wildcards.
-
 .TP
-.BI % <modifiers>n
-.SM where \fIn\fR <- [0..9]
+.BI % <modifiers>N
+.SM where \fIN\fR <- [0..9]
 
 replaced with the portion of the filename matching the \fIn\fRth \*(lq*\*(rq
 wildcard in the file specification. 0 is taken to mean 10.
-
 .TP
 .BI % <modifiers>c
 .SM where \fIc\fR <- [a..z]
-
 .RS
-replace by values according to the following table:
+replaced by values according to the following table:
 .PP
 .BR %t " title
 .br
@@ -202,7 +179,7 @@ replace by values according to the following table:
 .br
 .BR %f " filename
 .br
-.BR %x " auto-increasing\ counter 
+.BR %x " auto-increasing\ counter
 .PP
 All values get read (where applicable) from the source tag, which is specified
 by the left-most specified tag format on the command line, and reflect the
@@ -210,15 +187,12 @@ state of the file before any modifications were made. Similarly, \fI%f\fR is
 always the original filename. The \fI%x\fR value gets increased each time it
 is substituted, and is intended to be used for auto-numbering.
 .RE
-
 .TP
 .B %%
 replaced with a single \*(lq%\*(rq
-
 .TP
 .B %,
 replaced with the newline (\*(lq\en\*(rq) character
-
 .SS Available \fI<modifiers>\fR (optional):
 .TP
 .BR + " (plus\ sign)
@@ -236,58 +210,45 @@ Multiple hash signs can be stacked for more padding. Intended for numeric
 fields only.
 .TP
 .BI | fallback |
-If substitution would yield an empty value, substitute with \fIfallback\fR 
-instead. \fIfallback\fR itself may contain other substitutions, but no other 
+If substitution would yield an empty value, substitute with \fIfallback\fR
+instead. \fIfallback\fR itself may contain other substitutions, but no other
 .B |
 (pipe) symbols or fallbacks.
 .RE
-
 .SH EXAMPLES
 Here are some examples of using id3:
-.PP
-
 .TP
 \fBid3 -a "Stallman" -t "Free Software Song" fs_song.mp3"
 Add a simple tag to a file.
-
 .TP
 \fBid3 -d *.mp3
 Removes all ID3v1 tags from all mp3's.
-
 .TP
 \fBid3 -2 -1! fs_song.mp3
-Copy ID3v2 tag to ID3v1 tag in selected file. (Note the order)
-
+Copy ID3v2 tag to ID3v1 tag in selected file.
 .TP
 \fBid3 -a "TAFKAT" -n "%1" -t "%c2" "*. *.mp3"
 Sets tag fields correspondingly:
   01. my_song.mp3  [=>] "01" "My Song"
   02. untitled.mp3 [=>] "02" "Untitled"    etc..
-
 .TP
 \fBid3 -2 -f "%a - %t.mp3" blaet.mp3
 Rename file to a standard format, using ID3v2 values.
-
 .TP
 \fBid3 -2 -rAPIC -s 0 *.mp3
 Removes embedded images and padding from all mp3's.
-
 .TP
 \fBid3 -2 -!d *.mp3
 Rewrite ID3v2 tag, removing spaces, keeping only the basic fields.
-
 .TP
 \fBid3 -2 -wUSLT "foo, bar%,lalala!%," blaet.mp3
 Adds an ID3v2 lyric frame to blaet.mp3.
-
 .TP
 \fBid3 -v -g alt-rock -alnt "The Author" %1 %2 %3 "Author - */(*) *.mp3"
 Process multiple directories at once.
-
 .TP
 \fbid3 -1 -2! -c "Was: %f" -f "%|TAFKAT|a - %|Untitled (%x)|t.mp3" "*.mp3"
 More advanced rename. Save previous filename in the comment field, and copies ID3v1 to ID3v2.
-
 .SH NOTES
 The internal pattern matching emulates the normal pattern matching of
 \*(lqsh\*(rq. It supports ?, * and [].
@@ -305,7 +266,6 @@ Do NOT add ID3 tags to files for which it does not make sense, i.e, add them
 only to MP3 files. In particular, do not add ID3v2 tags to Ogg files, since
 ID3v2 tags start at the beginning of the file, thereby resulting in corrupted
 Ogg files.
-
 .SH COMPATIBILITY
 id3 has a built-in genre list of 148 genres. If you pass the -g parameter a
 string instead of a number when using ID3v1, id3 tries to find the specified
@@ -320,14 +280,11 @@ USER (tos) and PCNT (numeric play counter). It is a no-op for ID3v1.
 id3 does not support ID3v2 v2.0 or earlier, neither does it support the new
 ID3v2 v4.0 (yet?). It also does not support ID3v2 features as compression,
 encryption, ...
-
 .SH AUTHOR
 Written by Marc R. Schoolderman <squell@alumina.nl>.
-
 .SH COPYRIGHT
 This is free software; see the source for copying conditions. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-
 .SH SEE ALSO
 Program homepage: http://home.wanadoo.nl/squell/id3.html
 
