--- a/INSTALL
+++ b/INSTALL
@@ -18,8 +18,11 @@ the contents of the source distribution:
  charconv.*     - character conversion                          (C++)
  set_base.*     - abstract patch class                          (C++)
  setid3.*       - + id3v1 implementation                        (C++)
+ getid3.*       - + id3v1 reader                                (C++)
  setid3v2.*     - + id3v2 implementation                        (C++)
+ getid3v2.*     - + id3v2 reader                                (C++)
  setfname.*     - + file renamer                                (C++)
+ setecho.*      - + stdout formatter                            (C++)
  varexp.*       - wildcard/pattern matching class               (C++)
  ffindexp.*     - filefinder/matcher                            (C++)
  auto_dir.h     - smart dirent pointer class                    (C++)
