--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@ Changelog for 'id3'.
 
 2005-034 (W26):                                ---------[v0.75]-----------
   updated documentation
+  getid3.cpp: fixed localization bug
 
 2005-033 (W05):
   setid3[v2].cpp: setting genre by number now works through substituion
