--- a/README
+++ b/README
@@ -7,7 +7,8 @@ _>\/| |(_)|_)_>\/_>
 ~~/~~~~~~~|~~~~/~~~
        id3 [-v] [-12] [-d] [-t title] [-a artist] [-g genre]
         [-n tracknr] [-l album] [-y year] [-c comment]
-        [-s size] [-rFRAME] [-wFRAME data] [ "filespec" ... ]
+        [-!]  [-s size] [-rFRAME] [-wFRAME data]
+        [-q string] [-f filename] [ "filespec"  ... ]
 
  _| _  _ _._o.__|_o _ ._
 (_|(/__>(_| ||_)|_|(_)| |
