--- a/INSTALL
+++ b/INSTALL
@@ -16,7 +16,7 @@ the contents of the source distribution:
 -main.cpp       - main program file                             (C++)
 -sedit.*        - string formatting                             (C++)
  charconv.*     - character conversion                          (C++)
--set_base.*     - abstract patch class                          (C++)
+ set_base.*     - abstract patch class                          (C++)
  setid3.*       - + id3v1 implementation                        (C++)
  getid3.*       - + id3v1 reader                                (C++)
  setid3v2.*     - + id3v2 implementation                        (C++)
