--- a/INSTALL
+++ b/INSTALL
@@ -14,7 +14,7 @@ the contents of the source distribution:
  makefile.bcc   - makefile for borland c++
 
 -main.cpp       - main program file                             (C++)
--sedit.*        - string formatting                             (C++)
+ sedit.*        - string formatting                             (C++)
  charconv.*     - character conversion                          (C++)
  set_base.*     - abstract patch class                          (C++)
  setid3.*       - + id3v1 implementation                        (C++)
