--- a/README
+++ b/README
@@ -8,7 +8,7 @@ _>\/| |(_)|_)_>\/_>
        id3 [-v] [-12] [-d] [-t title] [-a artist] [-g genre]
         [-n tracknr] [-l album] [-y year] [-c comment]
         [-!]  [-s size] [-rFRAME] [-wFRAME data]
-        [-q string] [-f filename] [ "filespec"  ... ]
+        [-f filename] [-m pattern] [-q string] [ "filespec" ... ]
 
  _| _  _ _._o.__|_o _ ._
 (_|(/__>(_| ||_)|_|(_)| |
@@ -76,11 +76,6 @@ _>\/| |(_)|_)_>\/_>
             Genres  can  be  specified  either  directly or with
             their assigned number, regardless of tag format.
 
-       -q "format"
-            for each file encountered, `format' will get scanned
-            for  substitution  commands, and written to standard
-            output.
-
        -f "filename-template"
             rename     files     encountered     according    to
             `filename-template'.  The  argument  is  scanned for
@@ -89,14 +84,25 @@ _>\/| |(_)|_)_>\/_>
             Trying  to  rename  to an already existing file will
             cause an error.
 
-       The  following  options  only  operate  on  the  last tag
-       selected, and only have meaning where relevant.
+       -m "filename-template"
+            the  reverse  of  -f;  process  all files that match
+            `filename-template',  setting  the  tag accordingly.
+            For example, `-m "%a - %t.mp3"' is shorthand for
+            `-a %1 -t %2 "* - *.mp3"'
+
+       -q "format"
+            for each file encountered, `format' will get scanned
+            for  substitution  commands, and written to standard
+            output.
+
+       The  following  options  operate on the last tag selected
+       before them, and only have meaning where relevant.
 
        -!   fill  all  standard tag fields with information from
             the   source   tag.   This  is  similar  to  writing
             `-talnygc  %t  %a %l %n %y %g %c', but only operates
-            on  the  last tag. It is possible for the source and
-            destination tag to be the same.
+            on  the  most  recent  tag.  It  is possible for the
+            source and destination tag to be the same.
 
        -s size
             try  to  write a new tag using exactly `size' bytes,
@@ -109,7 +115,8 @@ _>\/| |(_)|_)_>\/_>
 
        -wFRAME data
             add  /  update  a frame named `FRAME' with `data' in
-            the  tag.  Again,  consult the format documentation.
+            the   tag.   `data'   is  scanned  for  substitution
+            commands.  Again,  consult the format documentation.
             See `COMPATIBILITY' for more information.
 
        Individual  options  can  be stacked in a single argument
