--- a/README
+++ b/README
@@ -7,8 +7,8 @@ _>\/| |(_)|_)_>\/_>
 ~~/~~~~~~~|~~~~/~~~
        id3 [-v] [-12] [-d] [-t title] [-a artist] [-g genre]
         [-n tracknr] [-l album] [-y year] [-c comment]
-        [-!]  [-s size] [-rFRAME] [-wFRAME data]
-        [-f filename] [-m pattern] [-q string] [ "filespec" ... ]
+        [-!] [-s size] [-rFRAME] [-wFRAME data]
+        [-f filename] [-m pattern] [-q string] [-R] [ "filespec" ... ]
 
  _| _  _ _._o.__|_o _ ._
 (_|(/__>(_| ||_)|_|(_)| |
@@ -94,6 +94,12 @@ _>\/| |(_)|_)_>\/_>
             for each file encountered, `format' will get scanned
             for  substitution  commands, and written to standard
             output.
+
+       -R   recursively  descend into all subdirectories to look
+            for  matching  files,  instead  of just the the base
+            directory.  Use  with  caution - in most cases, it's
+            more   flexible  to  use  wildcards  for  processing
+            multiple directories.
 
        The  following  options  operate on the last tag selected
        before them, and only have meaning where relevant.
