--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,11 @@
 Changelog for 'id3'.
 
+2005-060 (W09):
+  id3v2.c:128:[bug] since v0.75, rejected id3v2 tags w/o padding
+
+2005-048 (W07):
+  fileexp.cpp:133: don't follow symlinks
+
 2005-040 (W06):
   fileops.c:48: now use mkstemp on systems that indicate support for it
 
