--- a/CHANGES
+++ b/CHANGES
@@ -210,18 +210,19 @@ Changelog for 'id3'.
 
 Todo list:
 
+  - Reading MP3 data (Bitrate, length, etc. Half done.)
+  - Cross-directory renaming/moving
   - Conditional expressions
   - More things:
     + Support for Ogg Vorbis
     + Support for APEv2
-    + Support for Lyrics3 v2.0 (?)
+    + Support for Lyrics3 v2.0 (no priority)
   - Internationalization (Unicode)
     + Add support for UTF16 in ID3v2
-    + Enable multibyte encodings for varexp (?)
-  - Cross-directory renaming/moving
+    + Enable multibyte encodings for varexp (no priority)
   - Tag handling(/removal) for ID3v2 prior 3
   - Extend substitution capabilities (i/o? slice?)
-  - Fetch default data ("-j filename")
+  - User configurable switches (.rc file?)
 
 Thanks go out to everybody who has responded with questions, suggestions,
 and bug reports!
