--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Changelog for 'id3'.
 
+2005-187 (W27):
+  increased design seperation
+
 2005-060 (W09):
   id3v2.c:128:[bug] since v0.75, rejected id3v2 tags w/o padding
 
