--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@ Changelog for 'id3'.
 
 2005-187 (W27):
   increased design seperation
+  main.cpp:136: [bug] %x could get incremented more than once for each file
 
 2005-060 (W09):
   id3v2.c:128:[bug] since v0.75, rejected id3v2 tags w/o padding
